comment(index.html): add comment for test
add comment for test to index.html

Issue #5

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
         <!-- TODO: create top page -->
 
         <!-- The comment for git pull test -->
+        <!-- Hey !! this comment is one for test !! -->
     </body>
 </html>
