--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/reset.css">
 
         <!-- favicon -->
 				<link rel="shortcut icon" href="/favicon.ico">
@@ -21,7 +21,32 @@
 
     <body>
         <!-- TODO: create top page -->
+        <h1>知恵袋が生んだプログラマー</h1>
+        <a href = "index.html">ホーム</a>
+        <a href = "index.html">学習内容</a>
+        <a href = "index.html">メンバー</a>
+        <a href = "index.html">アクセス</a>
+        <a href = "index.html">お問い合わせ</a>
+    
+        <p>私たちは、知恵袋で知り合ったメンバーで結成したチームです。</p>
+        <p>初心者の方も１からレクチャーさせていただきます。</p>
+        <p>お気軽にご相談下さい。</p>
 
+        <h2>こんな人にオススメ</h2>
+        <p>「これからプログラミングを始めたい方」、「プログラミングを一人でしているけど刺激がほしい」、「初心者の方にレクチャーしたい」と思う方には、是非私たちのチームに参加していただきたいです！！</p>
+
+
+        <h3>学習言語</h3>
+        <ul>
+            <li>Java</li>
+            <li>PHP</li>
+            <li>HTML･CSS</li>
+            <li>C#</li>
+            <li>javascript</li>
+            <li>etc...</li>
+        <ul>
+
+        <h3></h3>
         <!-- The comment for git pull test -->
         <!-- Hey !! this comment is one for test !! -->
     </body>
