--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
 
     <body>
         <!-- TODO: create top page -->
-
-        <!-- The comment for git pull test -->
-        <!-- Hey !! this comment is one for test !! -->
+        <!--heaber-->
+        <div id = "heaber">...</div>
+        <!--nav-->
+        <div id = "nav">...</div>
+        <!--container-->
+        <div id = "container">...</div>
+        <!--left_container-->
+        <div id = "left-container">...</div>
+        <!--right_container-->
+        <div id = "right-container">...</div>
+        <!--footer-->
+        <div id = "footer">...</div>
     </body>
 </html>
