--- a/index.html
+++ b/index.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/style.css">
 
-        <!-- favicon -->
-				<link rel="shortcut icon" href="/favicon.ico">
-        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
+<!-- favicon -->
+                <link rel="shortcut icon" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 
-        <!-- script files -->
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    </head>
+<!-- script files -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+</head>
 
-    <body>
-        <!-- TODO: create top page -->
-        <!--heaber-->
-        <div id = "heaber">...</div>
-        <!--nav-->
-        <div id = "nav">...</div>
-        <!--container-->
-        <div id = "container">...</div>
-        <!--left_container-->
-        <div id = "left-container">...</div>
-        <!--right_container-->
-        <div id = "right-container">...</div>
-        <!--footer-->
-        <div id = "footer">...</div>
-    </body>
+<body>
+<!-- TODO: create top page -->
+<!--site-box-->
+<div id = "site-box">
+<!--heaber-->
+<div id = "heaber">
+<img src="image/logo.jpg" alt=" " width="80" height="80">
+<p class = "header_title">知恵袋</p>
+</div>
+<!--nav-->
+<div id = "nav">
+<a href = "index.html">ホーム</a>
+<a href = "index.html">学習内容</a>
+<a href = "index.html">メンバー</a>
+<a href = "index.html">アクセス</a>
+<a href = "index.html">お問い合わせ</a>
+</div>
+<!--container-->
+<div id = "container"><p>container</p></div>
+<!--left_container-->
+<div id = "left-container">left-container</div>
+<!--right_container-->
+<div id = "right-container">tight-centainer</div>
+<!--footer-->
+<div id = "footer"><p>footer</p></div>
+</div>
+</body>
 </html>
+</html>
+
