--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 <a href = "index.html">アクセス</a>
 <a href = "index.html">お問い合わせ</a>
 </div>
+<!--image picture-->
+<div id = "picture">
+    <p>画像</p>
+</div>
 <!--container-->
 <div id = "container"><p>container</p></div>
 <!--left_container-->
