--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -32,9 +33,9 @@
 		<div id="nav">
             <a href="index.html">ホーム</a> 
             <a href="index.html">学習内容</a>
-            <ahref="index.html">メンバー</a>
+            <a href="index.html">メンバー</a>
             <a href="index.html">アクセス</a>
-            <ahref="index.html">お問い合わせ</a>
+            <a href="index.html">お問い合わせ</a>
 		</div>
 		<!--image picture-->
 		<div id="picture">
