--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
+
     <!-- favicon -->
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
@@ -13,45 +14,51 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
     <!-- script files -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-    <!-- TODO: create top page -->
     <!--site-box-->
     <div id="site-box">
+
     <!--heaber-->
-    <div id="heaber">
+    <div id="heaber" class = "layout_1">
         <img src="image/logo.jpg" alt=" " width="80" height="80">
-        <p class="header_title">
         <p>知恵袋</p>
     </div>
+
     <!--nav-->
-    <div id="nav">
+    <div id="nav" class = "layout_1">
         <a href="index.html">ホーム</a> 
         <a href="index.html">学習内容</a>
         <a href="index.html">メンバー</a>
         <a href="index.html">アクセス</a>
         <a href="index.html">お問い合わせ</a>
     </div>
-    <!--image picture-->
-    <div id="picture">
+
+    <!--image Picture-->
+    <div id="picture" class = "layout_1">
         <p>画像</p>
     </div>
+
     <!--container-->
-    <div id="container">
+    <div id="container" class = "layout_1">
         <p>container</p>
     </div>
-    <!--left_container-->
-    <div id="left-container">
+
+    <!--left Container-->
+    <div id="left-container" class = "layout_1">
         <p>left-container</p>
     </div>
-    <!--right_container-->
-    <div id="right-container">
+
+    <!--right Container-->
+    <div id="right-container" class = "layout_1">
         <p>tight-centainer</p>
     </div>
+
     <!--footer-->
-    <div id="footer">
+    <div id="footer" class = "layout_1">
         <p>footer</p>
     </div>
     </div>
