--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
 
     <!-- script files -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
 </head>
 <body>
-    <!--site-box-->
     <div id="site-box">
 
     <!--heaber-->
-    <div id="heaber" class = "layout_1">
+    
+    <div id="heaber" class = "layout">
         <img src="image/logo.jpg" alt=" " width="80" height="80">
         <p>知恵袋</p>
     </div>
 
-    <!--nav-->
-    <div id="nav" class = "layout_1">
+    <!-- global navigation menu -->
+
+    <div id="nav" class = "layout">
         <a href="index.html">ホーム</a> 
         <a href="index.html">学習内容</a>
         <a href="index.html">メンバー</a>
@@ -37,28 +39,33 @@
         <a href="index.html">お問い合わせ</a>
     </div>
 
-    <!--image Picture-->
-    <div id="picture" class = "layout_1">
+    <!--image picture-->
+
+    <div id="picture" class = "layout">
         <p>画像</p>
     </div>
 
     <!--container-->
-    <div id="container" class = "layout_1">
+
+    <div id="container" class = "layout">
         <p>container</p>
     </div>
 
-    <!--left Container-->
-    <div id="left-container" class = "layout_1">
+    <!--left container-->
+
+    <div id="left-container" class = "layout">
         <p>left-container</p>
     </div>
 
-    <!--right Container-->
-    <div id="right-container" class = "layout_1">
+    <!--right container-->
+
+    <div id="right-container" class = "layout">
         <p>tight-centainer</p>
     </div>
 
     <!--footer-->
-    <div id="footer" class = "layout_1">
+
+    <div id="footer" class = "layout">
         <p>footer</p>
     </div>
     </div>
