--- a/index.html
+++ b/index.html
@@ -17,20 +17,18 @@
 
     <!-- script files -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
 </head>
+
 <body>
     <div id="site-box">
 
-    <!--heaber-->
-    
-    <div id="heaber" class = "layout">
+    <!-- header -->
+    <div id="header" class = "layout">
         <img src="image/logo.jpg" alt=" " width="80" height="80">
         <p>知恵袋</p>
     </div>
 
     <!-- global navigation menu -->
-
     <div id="nav" class = "layout">
         <a href="index.html">ホーム</a> 
         <a href="index.html">学習内容</a>
@@ -39,32 +37,27 @@
         <a href="index.html">お問い合わせ</a>
     </div>
 
-    <!--image picture-->
-
+    <!-- image picture -->
     <div id="picture" class = "layout">
         <p>画像</p>
     </div>
 
-    <!--container-->
-
+    <!-- container -->
     <div id="container" class = "layout">
         <p>container</p>
     </div>
 
-    <!--left container-->
-
+    <!-- left container -->
     <div id="left-container" class = "layout">
         <p>left-container</p>
     </div>
 
-    <!--right container-->
-
+    <!-- right container -->
     <div id="right-container" class = "layout">
         <p>tight-centainer</p>
     </div>
 
-    <!--footer-->
-
+    <!-- footer -->
     <div id="footer" class = "layout">
         <p>footer</p>
     </div>
