--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- header -->
     <div id="header" class = "layout">
         <img src="image/logo.jpg" alt=" " width="80" height="80">
-        <p>知恵袋</p>
+        <p>知恵袋だよ</p>
     </div>
 
     <!-- global navigation menu -->
