--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <body>
     <div id="site-box">
     <!-- header -->
-    <div id="header" class = "layout">
+    <div id="header" class = "frame_layout">
         <img src="#" alt=" " width="80" height="80">
         <p>知恵袋だよ</p>
     </div>
 
     <!-- global navigation menu -->
-    <div id="nav" class = "layout">
+    <div id="nav" class = "frame_layout">
         <a href="index.html">ホーム</a> 
         <a href="index.html">学習内容</a>
         <a href="index.html">メンバー</a>
@@ -37,29 +37,31 @@
     </div>
 
     <!-- image picture -->
-    <div id="picture" class = "layout">
+    <div id="picture" class = "frame_layout">
         <p>画像</p>
     </div>
 
     <!-- container -->
-    <div id="container" class = "layout">
+    <div id="container" class = "frame_layout">
         <p>container</p>
     </div>
 
     <!-- left container -->
-    <div id="left-container" class = "layout">
+    <div id="left-container" class = "frame_layout">
         <p>left-container</p>
     </div>
 
     <!-- right container -->
-    <div id="right-container" class = "layout">
+    <div id="right-container" class = "frame_layout">
         <p>tight-centainer</p>
     </div>
 
     <!-- footer -->
-    <div id="footer" class = "layout">
-        <p>footer</p>
-    </div>
+    <footer>
+        <div id="footer" class = "frame_layout">
+            <p>footer</p>
+        </div>
+    </footer>
     </div>
 </body>
 </html>
