--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <!-- left container -->
-    <div id="left-container" class = "frame_layout">
+    <div id="left_container" class = "frame_layout">
         <p>left-container</p>
     </div>
 
