--- a/index.html
+++ b/index.html
@@ -46,16 +46,19 @@
         <p>container</p>
     </div>
 
-    <!-- left container -->
-    <div id="left_container" class = "frame_layout">
-        <p>left-container</p>
-    </div>
+    <!--left right frame-->
+    <div id = "l_r_frame">
+        <!-- left container -->
+        <div id="left_container" class = "frame_layout">
+            <p>left-container</p>
+        </div>
 
-    <!-- right container -->
-    <div id="right_container" class = "frame_layout">
-        <p>tight-centainer</p>
+        <!-- right container -->
+        <div id="right_container" class = "frame_layout">
+            <p>tight-centainer</p>
+        </div>
     </div>
-
+    
     <!-- footer -->
     <footer>
         <div id="footer" class = "frame_layout">
