--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
 
 <body>
     <div id="site_box">
-        
+
     <!-- header -->
     <header class = "frame_layout">
-        <div>
             <img src="#" alt=" " width="80" height="80">
-            <p>知恵袋だよ</p>
+            <p></p>
 
             <!-- global navigation menu -->
             <div id="nav">
@@ -36,8 +35,6 @@
                 <a href="index.html">アクセス</a>
                 <a href="index.html">お問い合わせ</a>
             </div>
-            
-        </div>
     </header>
 
     <!-- image picture -->
@@ -51,7 +48,7 @@
     </div>
 
     <!--left right frame-->
-    <div id = "l_r_frame">
+    <div id = "l_r_container">
         <!-- left container -->
         <div id="left_container" class = "frame_layout">
             <p>left-container</p>
@@ -64,10 +61,8 @@
     </div>
 
     <!-- footer -->
-    <footer>
-        <div id="footer" class = "frame_layout">
-            <p>footer</p>
-        </div>
+    <footer class = "frame_layout">
+        <p>footer</p>
     </footer>
     </div>
 </body>
