--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
     <!--left right frame-->
     <div id = "l_r_container">
         <!-- left container -->
-        <div id="left_container" class = "frame_layout">
+        <div id="left_container">
             <p>left-container</p>
         </div>
 
         <!-- right container -->
-        <div id="right_container" class = "frame_layout">
+        <div id="right_container">
             <p>tight-centainer</p>
         </div>
     </div>
 
     <!-- footer -->
-    <footer class = "frame_layout">
+    <footer class ="frame_layout">
         <p>footer</p>
     </footer>
     </div>
