--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <!--left right frame-->
     <div id = "l_r_container">
         <!-- left container -->
-        <div id="left_container">
+        <div id="left_container" class = "frame_layout">
             <p>left-container</p>
         </div>
 
         <!-- right container -->
-        <div id="right_container">
+        <div id="right_container" class = "frame_layout">
             <p>tight-centainer</p>
         </div>
     </div>
