--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="site_box">
 
     <!-- header -->
-    <header class="frame_layout">
+    <header>
         <img src="#" alt=" " width="80" height="80">
         <p></p>
 
@@ -38,30 +38,30 @@
     </header>
 
     <!-- image picture -->
-    <div id="picture" class="frame_layout">
+    <div id="picture">
         <p>画像</p>
     </div>
 
     <!-- container -->
-    <div id="container" class="frame_layout">
+    <div id="container">
         <p>container</p>
     </div>
 
     <!--left right frame-->
     <div id="l_r_container">
         <!-- left container -->
-        <div id="left_container" class="frame_layout">
+        <div id="left_container">
             <p>left-container</p>
         </div>
 
         <!-- right container -->
-        <div id="right_container" class="frame_layout">
+        <div id="right_container">
             <p>tight-centainer</p>
         </div>
     </div>
 
     <!-- footer -->
-    <footer class="frame_layout">
+    <footer>
         <p>footer</p>
     </footer>
     </div>
