--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="site_box">
 
     <!-- header -->
-    <header>
+    <header class="bottom_lyaout">
         <img src="#" alt=" " width="80" height="80">
         <p></p>
 
@@ -38,17 +38,17 @@
     </header>
 
     <!-- image picture -->
-    <div id="picture">
+    <div id="picture" class="bottom_lyaout">
         <p>画像</p>
     </div>
 
     <!-- container -->
-    <div id="container">
+    <div id="container" class="bottom_lyaout">
         <p>container</p>
     </div>
 
     <!--left right frame-->
-    <div id="l_r_container">
+    <div id="l_r_container" class="bottom_lyaout">
         <!-- left container -->
         <div id="left_container">
             <p>left-container</p>
@@ -61,7 +61,7 @@
     </div>
 
     <!-- footer -->
-    <footer>
+    <footer class="bottom_lyaout">
         <p>footer</p>
     </footer>
     </div>
