--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <!--left right frame-->
     <div id="l_r_container" class="bottom_lyaout">
         <!-- left container -->
-        <div id="left_container">
+        <div id="left_container" class="size_container">
             <p>left-container</p>
         </div>
 
         <!-- right container -->
-        <div id="right_container">
+        <div id="right_container" class="size_container">
             <p>tight-centainer</p>
         </div>
     </div>
@@ -65,5 +65,6 @@
         <p>footer</p>
     </footer>
     </div>
+    
 </body>
 </html>
