--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </header>
 
     <!-- image picture -->
-    <div id="picture" class="bottom_lyaout">
+    <div class="bottom_lyaout">
         <p>画像</p>
     </div>
 
     <!-- container -->
-    <div id="container" class="bottom_lyaout">
+    <div class="bottom_lyaout">
         <p>container</p>
     </div>
 
