--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <p></p>
 
         <!-- global navigation menu -->
-        <div id="nav">
+        <nav>
             <a href="index.html">ホーム</a> 
             <a href="index.html">学習内容</a>
             <a href="index.html">メンバー</a>
             <a href="index.html">アクセス</a>
             <a href="index.html">お問い合わせ</a>
-        </div>
+        </nav>
     </header>
 
     <!-- image picture -->
@@ -48,7 +48,7 @@
     </div>
 
     <!--left right frame-->
-    <div id="l_r_container" class="bottom_lyaout">
+    <div class="bottom_lyaout">
         <!-- left container -->
         <div id="left_container" class="size_container">
             <p>left-container</p>
@@ -61,7 +61,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="bottom_lyaout">
+    <footer>
         <p>footer</p>
     </footer>
     </div>
