--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     </div>
 
     <!--left right frame-->
-    <div class="bottom_lyaout">
+    <div id="l_r_container" class="bottom_lyaout">
         <!-- left container -->
-        <div id="left_container" class="size_container">
+        <div id="left_container">
             <p>left-container</p>
         </div>
 
         <!-- right container -->
-        <div id="right_container" class="size_container">
+        <div id="right_container">
             <p>tight-centainer</p>
         </div>
     </div>
