--- a/index.html
+++ b/index.html
@@ -23,25 +23,27 @@
 
     <!-- header -->
     <header class="bottom_lyaout">
-            <img src="#" alt=" " width="80" height="80">
-            <p></p>
-    
-            <!-- global navigation menu -->
-            <nav>
-                <a href="index.html">ホーム</a> 
-                <a href="index.html">学習内容</a>
-                <a href="index.html">メンバー</a>
-                <a href="index.html">アクセス</a>
-                <a href="index.html">お問い合わせ</a>
-            </nav>
+        <img src="#" alt=" " width="80" height="80">
+        <p></p>
+
+        <!-- global navigation menu -->
+        <nav>
+            <a href="index.html">ホーム</a> 
+            <a href="index.html">学習内容</a>
+            <a href="index.html">メンバー</a>
+            <a href="index.html">アクセス</a>
+            <a href="index.html">お問い合わせ</a>
+        </nav>
+
     </header>
 
-    <div id="site_box">
-
     <!-- image picture -->
-    <div class="bottom_lyaout">
-        <p>画像</p>
+    <div id="image_box"  class="bottom_lyaout">
+            <img src="" alt="" title="">
+            <p>画像</p>
     </div>
+
+    <div id="site_box">
 
     <!-- container -->
     <div class="bottom_lyaout">
@@ -62,7 +64,7 @@
     </div>
 
     </div>
-    
+
     <!-- footer -->
     <footer>
         <p>footer</p>
