--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <!-- header -->
-    <header class="bottom_lyaout">
+    <header>
         <img src="#" alt=" " width="80" height="80">
         <p></p>
 
@@ -38,7 +38,7 @@
     </header>
 
     <!-- image picture -->
-    <div id="image_box"  class="bottom_lyaout">
+    <div id="image_box" class="bottom_lyaout">
             <img src="" alt="" title="">
             <p>画像</p>
     </div>
