--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 
     <!-- header -->
     <header>
-        <img src="#" alt=" " width="80" hei
-        
-        ght="80">
+        <img src="#" alt=" " width="80" height="80">
         <p></p>
 
         <!-- global navigation menu -->
