--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
 
-    <!-- favicon -->
+    <!-- favicon -->   
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -23,22 +23,55 @@
 
     <!-- header -->
     <header>
-        <img src="#" alt=" " width="80" height="80">
-        <p></p>
-
-        <!-- global navigation menu -->
-        <nav>
-            <a href="index.html">ホーム</a> 
-            <a href="index.html">学習内容</a>
-            <a href="index.html">メンバー</a>
-            <a href="index.html">アクセス</a>
-            <a href="index.html">お問い合わせ</a>
-        </nav>
+        <ul class="h_box">
+            <li class="side_bar">
+                <div class="h_logo">
+                    <img src="./img/logo.png" alt=" " class="h_img">
+                </div>
+            </li>
+            <li class="side_bar">
+                <!-- global navigation menu -->
+                <nav>
+                    <ul class="menu_bar">
+                    <li>
+                        <a href="index.html">
+                            <span>ホーム</span>
+                            <span>home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html">
+                            <span>学習内容</span>
+                            <span>learning</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html">
+                            <span>メンバー</span>
+                            <span>member</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html">
+                            <span>アクセス</span>
+                            <span>access</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html">
+                            <span>お問い合わせ</span>
+                            <span>contact</span>
+                        </a>
+                    </li>
+                    </ul>
+                </nav>
+            </li>
+        </ul>
     </header>
 
     <!-- image picture -->
     <div id="image_box" class="bottom_lyaout">
-        <img src="" alt="" title="">
+        <img src="#" alt="" title="title">
         <p>画像</p>
     </div>
 
