--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="h_box">
             <li class="side_bar">
                 <div class="h_logo">
-                    <img src="./img/logo.png" alt=" " class="h_img">
+                    <img src="./img/logo.png" alt=" " width="200" height="100" class="h_img">
                 </div>
             </li>
             <li class="side_bar">
