--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
 
-    <!-- favicon -->   
+    <!-- favicon -->
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -27,44 +27,44 @@
             <li class="side_bar">
                 <div class="h_logo">
                     <a href="index.html"> 
-                        <img src="./img/logo.png" alt=" " width="200" height="100" class="h_img">
+                        <img src="./img/logo.png" alt="logo" width="200" height="100" class="h_img">
                     </a>
                 </div>
             </li>
+            <!-- global navigation menu -->
             <li class="side_bar">
-                <!-- global navigation menu -->
                 <nav>
                     <ul class="menu_bar">
-                        <a href="index.html">    
-                            <li>
-                                <span>ホーム</span>
-                                <span>home</span>
-                            </li>
-                        </a>
-                        <a href="index.html">
-                            <li>
-                                <span>学習内容</span>
-                                <span>learning</span>
-                            </li>
-                        </a>
-                        <a href="index.html">
-                            <li>
-                                <span>メンバー</span>
-                                <span>member</span>
-                            </li>
-                        </a>
-                        <a href="index.html">
-                            <li>
-                                <span>アクセス</span>
-                                <span>access</span>
-                            </li>
-                        </a>
-                        <a href="index.html">
-                            <li>
-                                <span>お問い合わせ</span>
-                                <span>contact</span>
-                            </li>
-                        </a>
+                    <a href="index.html">    
+                        <li>
+                            <span>ホーム</span>
+                            <span>home</span>
+                        </li>
+                    </a>
+                    <a href="index.html">
+                        <li>
+                            <span>学習内容</span>
+                            <span>learning</span>
+                        </li>
+                    </a>
+                    <a href="index.html">
+                        <li>
+                            <span>メンバー</span>
+                            <span>member</span>
+                        </li>
+                    </a>
+                    <a href="index.html">
+                        <li>
+                            <span>アクセス</span>
+                            <span>access</span>
+                        </li>
+                    </a>
+                    <a href="index.html">
+                        <li>
+                            <span>お問い合わせ</span>
+                            <span>contact</span>
+                        </li>
+                    </a>
                     </ul>
                 </nav>
             </li>
@@ -73,7 +73,7 @@
 
     <!-- image picture -->
     <div id="image_box" class="bottom_lyaout">
-        <img src="#" alt="" title="title">
+        <img src="#" alt="画像">
         <p>画像</p>
     </div>
 
