--- a/index.html
+++ b/index.html
@@ -74,11 +74,14 @@
     </header>
 
     <!-- image picture -->
-    <div id="image_box" class="bottom_lyaout top_text">
+    <div id="image_box" class="bottom_lyaout">
         <div class="slider">
-            <div><span class="text">ChiePro</br>Programming</span><img src="./img/WM.jpg" alt="image" class="img_size"></div>
-            <div><img src="./img/WM (2).jpg" alt="iamge"class="img_size"></div>
-            <div><img src="./img/WM (3).jpg" alt="image" class="img_size"></div>
+            <div><img src="./img/top_main.jpg" alt="image"class="img_size"></div>
+            <div><img src="./img/top_img.jpg" alt="image"class="img_size"></div>
+            <div><img src="./img/top_img2.jpg" alt="image"class="img_size"></div>
+            <div><img src="./img/top_img3.jpg" alt="image"class="img_size"></div>
+            <div><img src="./img/top_img4.jpg" alt="image"class="img_size"></div>
+            <div><img src="./img/top_main.jpg" alt="image"class="img_size"></div>
         </div> 
     </div>
 
