--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- header -->
     <header>
-        <ul class="h_box">
+        <div class="h_box">
             <li class="side_bar">
                 <div class="h_logo">
                     <a href="index.html"> 
@@ -69,7 +69,7 @@
                     </ul>
                 </nav>
             </li>
-        </ul>
+        </div>
     </header>
 
     <!-- image picture -->
