--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
     <!-- header -->
     <header>
         <div class="h_box">
-            <li class="side_bar">
-                <div class="h_logo">
+            <div class="top_logo">
                     <a href="index.html"> 
-                        <img src="./img/logo.png" alt="logo" width="200" height="100" class="h_img">
+                        <img src="./img/logo_198x156.png" alt="logo">
                     </a>
-                </div>
-            </li>
+            </div>
 
             <!-- global navigation menu -->
-            <li class="side_bar">
+            <div class="top_bar">
                 <nav>
                     <ul class="menu_bar">
                     <a href="index.html">    
@@ -68,7 +66,7 @@
                     </a>
                     </ul>
                 </nav>
-            </li>
+            </div>
         </div>
     </header>
 
