--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 
     <!-- header -->
     <header>
-        <div class="h_box">
             <div class="top_logo">
                     <a href="index.html"> 
-                        <img src="./img/logo_198x156.png" alt="logo">
+                        <img src="./img/logo.png" alt="logo">
                     </a>
             </div>
 
@@ -67,7 +66,6 @@
                     </ul>
                 </nav>
             </div>
-        </div>
     </header>
 
     <!-- image picture -->
