--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 
     <!-- favicon -->
     <link rel="shortcut icon" href="/favicon.ico">
@@ -18,60 +17,11 @@
 
     <!-- script files -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 </head>
 
 <body>
 
     <!-- header -->
-<<<<<<< HEAD
-        <ul class="h_box">
-            <li class="side_bar">
-                <div class="h_logo">
-                    <a href="index.html"> 
-                        <img src="./img/logo.png" alt="logo" width="200" height="100" class="h_img">
-                    </a>
-                </div>
-            </li>
-            <!-- global navigation menu -->
-            <li class="side_bar">
-                <nav>
-                    <ul class="menu_bar">
-                    <a href="index.html">    
-                        <li>
-                            <span>ホーム</span>
-                            <span>home</span>
-                        </li>
-                    </a>
-                    <a href="index.html">
-                        <li>
-                            <span>学習内容</span>
-                            <span>learning</span>
-                        </li>
-                    </a>
-                    <a href="index.html">
-                        <li>
-                            <span>メンバー</span>
-                            <span>member</span>
-                        </li>
-                    </a>
-                    <a href="index.html">
-                        <li>
-                            <span>アクセス</span>
-                            <span>access</span>
-                        </li>
-                    </a>
-                    <a href="index.html">
-                        <li>
-                            <span>お問い合わせ</span>
-                            <span>contact</span>
-                        </li>
-                    </a>
-                    </ul>
-                </nav>
-            </li>
-        </ul>
-=======
     <header>
         <div class="top_logo">
             <a href="index.html"> 
@@ -117,18 +67,11 @@
             </nav>
         </div>
     </header>
->>>>>>> origin/20-create-title
 
     <!-- image picture -->
     <div id="image_box" class="bottom_lyaout">
-        <div class="slider">
-            <div><img src="./img/top_main.jpg" alt="image"class="img_size"></div>
-            <div><img src="./img/top_img.jpg" alt="image"class="img_size"></div>
-            <div><img src="./img/top_img2.jpg" alt="image"class="img_size"></div>
-            <div><img src="./img/top_img3.jpg" alt="image"class="img_size"></div>
-            <div><img src="./img/top_img4.jpg" alt="image"class="img_size"></div>
-            <div><img src="./img/top_main.jpg" alt="image"class="img_size"></div>
-        </div> 
+        <img src="#" alt="画像">
+        <p>画像</p>
     </div>
 
     <div id="site_box">
@@ -158,15 +101,5 @@
         <p>footer</p>
     </footer>
 
-    <script>
-        $(document).ready(function(){
-          $('.slider').bxSlider({
-            auto: true,
-            minSlides: 1,
-            pager: false, /* スライドバー削除 */
-            controls: false, /* コントローラーバー削除 */
-          });
-        });
-    </script>
 </body>
 </html>
