--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 
     <!-- header -->
     <header>
-        <div class="top_logo">
+        <div class="logo">
             <a href="index.html"> 
-                <img src="./img/logo.png" alt="logo">
+                <img src="./img/logo.png" alt="ChiePro">
             </a>
         </div>
 
         <!-- global navigation menu -->
-        <div class="top_bar">
+        <div class="nav_menu">
             <nav>
             </nav>
         </div>
     </header>
 
     <!-- image picture -->
-    <div id="image_box" class="bottom_lyaout">
+    <div class="bottom_lyaout image_slider">
         <img src="#" alt="画像">
         <p>画像</p>
     </div>
