--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
         </div>
 
         <!-- global navigation menu -->
+        <!-- TODO: jQueryを使用 -->
         <div class="nav_menu">
             <nav>
             </nav>
         </div>
     </header>
 
-    <!-- image picture -->
-    <div class="bottom_lyaout image_slider">
+    <!-- image slider -->
+    <div class="image_slider layout_margin_b">
         <img src="#" alt="画像">
         <p>画像</p>
     </div>
@@ -45,12 +46,12 @@
     <div id="site_box">
 
     <!-- container -->
-    <div class="bottom_lyaout">
+    <div class="layout_margin_b">
         <p>container</p>
     </div>
 
     <!--left right frame-->
-    <div id="l_r_container" class="bottom_lyaout">
+    <div class="l_r_container layout_margin_b">
         <!-- left container -->
         <div id="left_container">
             <p>left-container</p>
