--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <!--left right frame-->
     <div class="l_r_container layout_margin_b">
         <!-- left container -->
-        <div id="left_container">
+        <div class="left_container">
             <p>left-container</p>
         </div>
 
         <!-- right container -->
-        <div id="right_container">
+        <div class="right_container">
             <p>tight-centainer</p>
         </div>
     </div>
