--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </div>
 
         <!-- global navigation menu -->
-        <!-- TODO: jQueryを使用 -->
         <div class="nav_menu">
             <nav>
+                <!-- TODO: グローバルナビゲーションメニューを作る -->
             </nav>
         </div>
     </header>
