--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/favicon.ico">
-    <!-- FIXME: 永久脱毛
+    <!-- FIXME: 適応する、画像がありません。画像の追加待ち
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
