--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/favicon.ico">
-    <!-- FIXME:
+    <!-- FIXME:適応する画像がありません。画像の追加待ち -->
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    -->
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -108,11 +107,10 @@
         $(function() {
             $('#gnav').meanmenu({
                 meanMenuClose: "x", // クローズボタン
-                meanMenuCloseSize: "18px", // クローズボタンのフォントサイズ
+                meanMenuCloseSize: "18rem", // クローズボタンのフォントサイズ
                 meanMenuOpen: "<span /><span /><span />", // 通常ボタン
                 meanRevealPosition: "right", // 表示位置
-                meanRevealColour: "", // 背景色
-                meanScreenWidth: "1370", // 表示させるウィンドウサイズ(ブレイクポイント)
+                meanScreenWidth: "768", // 表示させるウィンドウサイズ(ブレイクポイント)
             });
         });
     </script>
