--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
 
         <!-- global navigation menu -->
+        <div class="nav_wrap">
         <div class="nav_menu">
             <nav id="gnav">
                 <ul>
@@ -67,6 +68,7 @@
                 </a>
                 </ul>
             </nav>     
+        </div>
         </div>
     </header>
 
