--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/favicon.ico">
-    <!-- FIXME:適応する画像がありません。画像の追加待ち -->
+    <!-- FIXME:適応する画像がありません。画像の追加待ち
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -15,6 +15,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    -->
 
     <!-- script files -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
