--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- global navigation menu -->
         <div class="nav_wrap">
         <div class="nav_menu">
-            <nav id="gnav">
+            <nav>
                 <ul>
                 <a href="index.html">    
                     <li>
@@ -108,7 +108,7 @@
 
     <script>
         $(function() {
-            $('#gnav').meanmenu({
+            $('.nav_wrap').meanmenu({
                 meanMenuClose: "x", // クローズボタン
                 meanMenuCloseSize: "18rem", // クローズボタンのフォントサイズ
                 meanMenuOpen: "<span /><span /><span />", // 通常ボタン
