add absolute slider.css_No66-69

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
     <!-- image slider -->
     <div class="image_slider layout_margin_b">
-        <div class="slider">
+        <div class="slider abcd">
 
             <section>
-                <div class="image_layout_text">
+                <div class="image_layout_text absolute">
                     <h1>ChieProメンバー募集中</h1></br>
                     <p>初心者の方でも大歓迎！<br>対応言語多数</p> 
                 </div>
@@ -55,6 +55,7 @@
             </section>
 
             <section>
+                <div class="absolute">
                 <div class="image_layout_text image_top_text">
                     <h1>学習言語</h1>
                 </div>
@@ -64,6 +65,7 @@
                     <i class="fab fa-php"></i>
                     <i class="fab fa-js"></i>
                     <i class="fab fa-java"></i>
+                </div>
                 </div>
                     <img src="./img/top_img.jpg" alt="image"class="img_size">
             </section>
