11-ページの変更- slider.css

--- a/index.html
+++ b/index.html
@@ -45,19 +45,22 @@
     <!-- image slider -->
     <div class="image_slider layout_margin_b">
         <div class="slider abcd">
-
+            <!-- 1ページ目 -->
             <section>
                 <div class="image_layout_text absolute">
                     <h1>ChieProメンバー募集中</h1></br>
                     <p>初心者の方でも大歓迎！<br>対応言語多数</p> 
                 </div>
-                    <img src="./img/top_main.jpg" alt="image"class="img_size">
+                    <img src="./img/top_img1.jpg" alt="image"class="img_size">
             </section>
-
+            <!-- ２ページ目 -->
             <section>
-                <div class="absolute">
+                    <img src="./img/top_img2.jpg" alt="image"class="img_size">
+            </section>
+            <section>
+            <div class="absolute">
                 <div class="image_layout_text image_top_text">
-                    <h1>学習言語</h1>
+                    <h1>学習プログラミング言語</h1>
                 </div>
                 <div class="image_layout_text image_icon">
                     <i class="fab fa-html5"></i>
@@ -67,11 +70,8 @@
                     <i class="fab fa-java"></i>
                 </div>
                 </div>
-                    <img src="./img/top_img.jpg" alt="image"class="img_size">
+                <img src="./img/top_img3.jpg" alt="image"class="img_size">
             </section>
-            
-            <div><img src="./img/top_img2.jpg" alt="image"class="img_size"></div>
-            <div><img src="./img/top_img3.jpg" alt="image"class="img_size"></div>
             <div><img src="./img/top_img4.jpg" alt="image"class="img_size"></div>
         </div> 
     </div>
