--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
                     <img src="./img/top_img1.jpg" alt="image"class="img_size">
             </section>
             <!-- ２ページ目 -->
-            <section>
+            <section class="top_img2">
+                <div class="image_layout_text absolute">
+                    <p>あなたの小さなアイデアで世界は変わる。</p>
+                    <p>「あったらいいな」、「こんなの作りたい」を自分の手で作ってみよう。</p>
+                    <p>大きな一歩を踏み出し、私たちと共にプログラマーの道を歩みませんか？</p>
+                </div>
                     <img src="./img/top_img2.jpg" alt="image"class="img_size">
             </section>
             <section>
