style(index.html,slider.css,img) スライドショーの画像配置・テキスト配置を追加しました。Issus #11

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <!-- image slider -->
     <div class="image_slider layout_margin_b">
         <div class="slider abcd">
-            <!-- 1ページ目 -->
+
+            <!-- 1枚目 -->
             <section>
                 <div class="image_layout_text absolute">
                     <h1>ChieProメンバー募集中</h1></br>
@@ -53,31 +54,62 @@
                 </div>
                     <img src="./img/top_img1.jpg" alt="image"class="img_size">
             </section>
-            <!-- ２ページ目 -->
-            <section class="top_img2">
-                <div class="image_layout_text absolute">
-                    <p>あなたの小さなアイデアで世界は変わる。</p>
-                    <p>「あったらいいな」、「こんなの作りたい」を自分の手で作ってみよう。</p>
-                    <p>大きな一歩を踏み出し、私たちと共にプログラマーの道を歩みませんか？</p>
-                </div>
-                    <img src="./img/top_img2.jpg" alt="image"class="img_size">
-            </section>
+
+            <!-- ２枚目 -->
             <section>
-            <div class="absolute">
-                <div class="image_layout_text image_top_text">
-                    <h1>学習プログラミング言語</h1>
-                </div>
-                <div class="image_layout_text image_icon">
-                    <i class="fab fa-html5"></i>
-                    <i class="fab fa-css3-alt"></i>
-                    <i class="fab fa-php"></i>
-                    <i class="fab fa-js"></i>
-                    <i class="fab fa-java"></i>
-                </div>
+                <div class="top_img2">
+                    <div class="image_layout_text absolute">
+                        <p>あなたの小さなアイデアで世界は変わる。</p>
+                        <p>「あったらいいな」、「こんなの作りたい」を自分の手で作ってみよう。</p>
+                        <p>大きな一歩を踏み出し、私たちと共にプログラマーの道を歩みませんか？</p>
+                    </div>
+                 </div>
+                <img src="./img/top_img2.jpg" alt="image"class="img_size">
+            </section>
+
+            <!-- 3枚目 -->
+            <section>
+                <div class="absolute">
+                    <div class="image_layout_text image_top_text">
+                        <p>学習プログラミング言語</p>
+                    </div>
+                    <div class="image_layout_text image_icon">
+                        <i class="fab fa-html5"></i>
+                        <i class="fab fa-css3-alt"></i>
+                        <i class="fab fa-php"></i>
+                        <i class="fab fa-js"></i>
+                        <i class="fab fa-java"></i>
+                    </div>
                 </div>
                 <img src="./img/top_img3.jpg" alt="image"class="img_size">
             </section>
-            <div><img src="./img/top_img4.jpg" alt="image"class="img_size"></div>
+
+            <!-- 4枚目 -->
+            <section>
+                <div class="absolute">
+                    <div class="image_layout_text image_top_text">
+                        <p>使用ツール</p>
+                    </div>
+                    <div class="image_layout_text">
+                        <table>
+                            <tr>
+                                <td>チャットツール</td>
+                                <td>Slack</td>
+                            </tr>
+                            <tr>
+                                <td>バージョン管理</td>
+                                <td>Github</td>
+                            </tr>
+                            <tr>
+                                <td>開発ソフト</td>
+                                <td>eclipse･VSC</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <img src="./img/top_img4.jpg" alt="image"class="img_size">
+            </section>
+
         </div> 
     </div>
 
